--- a/data/playbooks/roles/ontap/volume/tasks/modify.yml
+++ b/data/playbooks/roles/ontap/volume/tasks/modify.yml
@@ -28,22 +28,26 @@
       state: present
       vserver:                 "{{ svm.name }}"    
       name:                    "{{ volume.name }}"
-      junction_path                   : "{{ volume.junction_path          | default(omit) }}"
-      language                        : "{{ volume.language               | default(omit) }}"
-      comment                         : "{{ volume.comment                | default(omit) }}"
-      type                            : "{{ volume.type                   | default(omit) }}"
-    # atime_update                    : "{{ volume.atime_update           | default(omit) }}" # bad rest implementation
-      compression                     : "{{ volume.compression            | default(omit) }}"
-      encrypt                         : "{{ volume.encrypt                | default(omit) }}"
-      group_id                        : "{{ volume.group_id               | default(omit) }}"
-      inline_compression              : "{{ volume.inline_compression     | default(omit) }}"
-      size_change_threshold           : "{{ volume.size_change_threshold  | default(omit) }}"
-      unix_permissions                : "{{ volume.unix_permissions       | default(omit) }}"
-      user_id                         : "{{ volume.user_id                | default(omit) }}"
-      volume_security_style           : "{{ volume.security_style         | default(omit) }}"
-      snaplock                        : "{{ volume.snaplock               | default(omit) }}"
-      volume_space_logical_reporting  : "{{ volume.logical_space_reporting   | default(omit) }}"
-      volume_space_logical_enforcement: "{{ volume.logical_space_enforcement | default(omit) }}"
+      type                            : "{{ volume.type                           | default(omit) }}"
+      is_online                       : "{{ volume.is_online                      | default(omit) }}"
+      activity_tracking               : "{{ volume.activity_tracking              | default(omit) }}"
+      analytics                       : "{{ volume.analytics                      | default(omit) }}"
+      auto_remap_luns                 : "{{ volume.auto_remap_luns                | default(omit) }}"
+      junction_path                   : "{{ volume.junction_path                  | default(omit) }}"
+      language                        : "{{ volume.language                       | default(omit) }}"
+      comment                         : "{{ volume.comment                        | default(omit) }}"
+      atime_update                    : "{{ volume.atime_update                   | default(omit) }}" 
+      compression                     : "{{ volume.compression                    | default(omit) }}"
+      encrypt                         : "{{ volume.encrypt                        | default(omit) }}"
+      group_id                        : "{{ volume.group_id                       | default(omit) }}"
+      inline_compression              : "{{ volume.inline_compression             | default(omit) }}"
+      size_change_threshold           : "{{ volume.size_change_threshold          | default(omit) }}"
+      unix_permissions                : "{{ volume.unix_permissions               | default(omit) }}"
+      user_id                         : "{{ volume.user_id                        | default(omit) }}"
+      volume_security_style           : "{{ volume.security_style                 | default(omit) }}"
+      snaplock                        : "{{ volume.snaplock                       | default(omit) }}"
+      logical_space_reporting         : "{{ volume.logical_space_reporting        | default(omit) }}"
+      logical_space_enforcement       : "{{ volume.logical_space_enforcement      | default(omit) }}"
       efficiency_policy               : "{{ volume.efficiency_policy.name         | default(omit) }}"
       export_policy                   : "{{ volume.export_policy.name             | default(omit) }}"
       snapshot_policy                 : "{{ volume.snapshot_policy.name           | default(omit) }}"
