--- a/data/playbooks/roles/ontap/quota_policy/tasks/set.yml
+++ b/data/playbooks/roles/ontap/quota_policy/tasks/set.yml
@@ -19,19 +19,30 @@
     set_fact:
       l_cluster:               "{{ cluster              | to_nice_yaml(2) | indent(2,true) | do_log('ontap/quota_policy/set','cluster',qlogname) }}"
       l_svm:                   "{{ svm                  | to_nice_yaml(2) | indent(2,true) | do_log('','svm',qlogname) }}"
-      l_quota_policy:          "{{ quota_policy                | to_nice_yaml(2) | indent(2,true) | do_log('','quota_policy',qlogname) }}"
+      l_quota_policy:          "{{ quota_policy         | to_nice_yaml(2) | indent(2,true) | do_log('','quota_policy',qlogname) }}"
 
   - name: "Set Quota Policy {{ quota_policy.name }}"
-    netapp.ontap.na_ontap_rest_cli:
+    na_ontap_rest_cli_idempotent:
       command: "vserver"
       verb: PATCH
       body: 
         quota_policy: "{{ quota_policy.name }}"
       params:
         vserver: "{{ svm.name }}"
+      idempotency_params:
+        custom_messages:
+          changed: "Quota policy {{ quota_policy.name }} set as active on SVM {{ svm.name }}"
+        precheck:
+          rest_cli:
+            command: "vserver"
+            verb: GET
+            params:
+              quota_policy: "{{ quota_policy.name }}"
+              vserver: "{{ svm.name }}"
+          skip_main_command:
+            num_records: "==1"        
       <<: *auth
     delegate_to: localhost
-
 
   when: 
   - quota_policy.name | default(false)
