--- a/data/playbooks/roles/ontap/snapmirror/tasks/create_one.yml
+++ b/data/playbooks/roles/ontap/snapmirror/tasks/create_one.yml
@@ -1,2 +1,3 @@
-- include_tasks: "facts.yml"
-- include_tasks: "create.yml"
+- include_tasks: "{{ playbook_dir}}/roles/ontap/snapmirror/tasks/facts.yml"
+- include_tasks: "{{ playbook_dir}}/roles/ontap/snapmirror/tasks/create.yml"
+
