--- a/data/playbooks/roles/ontap/volume/tasks/resize.yml
+++ b/data/playbooks/roles/ontap/volume/tasks/resize.yml
@@ -21,18 +21,16 @@
       l_svm:     "{{ svm     | to_nice_yaml(2) | indent(2,true) | do_log('','svm',qlogname) }}"
       l_volume:  "{{ volume  | to_nice_yaml(2) | indent(2,true) | do_log('','volume',qlogname) }}"  
 
-  - name: "resize volume [{{ volume.name }}]"
+  - name: "Resize volume [{{ volume.name }}]"
     netapp.ontap.na_ontap_volume:
       state: present
       vserver:                 "{{ svm.name }}"    
+      name:                    "{{ volume.name }}"
       size:                    "{{ volume.size | default(omit) }}"
       size_unit:               "{{ volume.size_unit | default(omit) }}"
-      name:                    "{{ volume.name }}"
       <<: *auth
     delegate_to: localhost
   when:
   - volume.name | default(false)
   - svm.name | default(false)    
   - volume.size | default(false)
-
-
