--- a/data/playbooks/roles/ontap/qtree/tasks/main.yml
+++ b/data/playbooks/roles/ontap/qtree/tasks/main.yml
@@ -9,3 +9,4 @@
     qtask_suffix: "{{ qsuffix | default('') }}"
     qtask_child: "{{ qchild | default('') }}"
     qtree_item:     
+    volume_item:
