add hashi vault

--- a/data/ansible/ansible.cfg
+++ b/data/ansible/ansible.cfg
@@ -1,3 +1,3 @@
 [defaults]
-callback_result_format: = yaml
+callback_result_format = yaml
 COLLECTIONS_PATH=/usr/share/ansible/collections/ansible_collections:/etc/ansible/collections/ansible_collections
