--- a/.env
+++ b/.env
@@ -35,3 +35,8 @@ DB_ENCRYPTION_SECRET=Netapp1!
 
 # access token secret
 ACCESS_TOKEN_SECRET=Netapp1!
+
+# vault address
+VAULT_ADDR=http://rhel1.demo.netapp.com:8200
+# vault token
+VAULT_TOKEN=<VAULT_TOKEN>
