--- a/.env
+++ b/.env
@@ -17,7 +17,7 @@ WEBAPP_DOCKER_PORT=443
 # the port on the host for the fake smtp server, feel free to set to 25
 SMTP_LOCAL_PORT=25
 # the port on the host for the fake smtp server web interface, feel free to set to 80
-SMTP_WEB_LOCAL_PORT=80
+SMTP_WEB_LOCAL_PORT=1080
 # enable https ?
 HTTPS=1
 # production
