--- a/data/playbooks/roles/maf/facts/tasks/credentials.yml
+++ b/data/playbooks/roles/maf/facts/tasks/credentials.yml
@@ -4,6 +4,17 @@
 # this is typically step one of the playbook
 - name: "Role - maf/facts/credentials"
   block:
+  # if you have credentials stored in hashi vault for example
+  # use env-var VAULT_TOKEN to store the access token (*********roottoken*********)
+  # and VAULT_ADDR to store the address of the vault (http://172.16.50.4:8200)
+  # - name: "Get credentials from hashi vault"
+  #   ansible.builtin.set_fact:
+  #     aiqum: "{{ lookup('hashi_vault', 'secret=ansibleforms/data/aiqum') }}"
+  #     vcenter: "{{ lookup('hashi_vault', 'secret=ansibleforms/data/vcenter') }}"
+  #     ontap: "{{ lookup('hashi_vault', 'secret=ansibleforms/data/ontap') }}"
+  #     ad: "{{ lookup('hashi_vault', 'secret=ansibleforms/data/ad') }}"
+  #     mysql: "{{ lookup('hashi_vault', 'secret=ansibleforms/data/mysql') }}"
+
   - name: "Set the credentials"
     ansible.builtin.set_fact:
       aiqum_host    : "{{ aiqum.host      | default('') }}"
