--- a/data/forms/lod.yaml
+++ b/data/forms/lod.yaml
@@ -58,3 +58,158 @@
   tileClass: has-background-info-light
   icon: file-import
   fields: []
+- name: Create svm advanced
+  type: ansible
+  playbook: test_create_lod_svm_advanced.yml
+  description: ""
+  roles:
+    - public
+  categories:
+    - MAF
+  tileClass: has-background-info-light
+  icon: bullseye
+  credentials:
+    aiqum: aiqum_rest
+  fields:
+    - name: location
+      label: Location
+      type: enum
+      dbConfig: self
+      default: __auto__
+      query: |
+        SELECT DISTINCT l.* FROM $(LOD_ENV_QUERY)
+      columns:
+      - name
+      valueColumn: code
+      group: Resource selection
+      line: rs_line1
+      model: vars_external.meta.location
+    - name: environment
+      label: Environment
+      default: __auto__
+      type: enum
+      dbConfig: self
+      query: |
+        SELECT DISTINCT e.* FROM $(LOD_ENV_QUERY) AND l.id=$(location.id)
+      columns:
+      - name
+      valueColumn: code
+      group: Resource selection
+      line: rs_line1
+      model: vars_external.meta.environment
+    - name: service
+      label: Service
+      default: __auto__
+      type: enum
+      dbConfig: self
+      query: |
+        SELECT DISTINCT s.* FROM $(LOD_ENV_QUERY) AND l.id=$(location.id) AND e.id=$(environment.id)
+      columns:
+      - name
+      valueColumn: code
+      group: Resource selection
+      line: rs_line1   
+      model: vars_external.meta.service
+    - name: service_level
+      label: Service Level
+      default: __auto__
+      type: enum
+      dbConfig: self
+      query: |
+        SELECT DISTINCT sl.* FROM $(LOD_ENV_QUERY) AND l.id=$(location.id) AND e.id=$(environment.id) AND s.id=$(service.id)
+      columns:
+      - name
+      valueColumn: code
+      group: Resource selection
+      line: rs_line1      
+      model: vars_external.meta.service_level
+    - name: resource
+      label: Resource
+      default: __auto__
+      type: enum
+      dbConfig: self
+      query: |
+        SELECT DISTINCT r.* FROM $(LOD_ENV_QUERY) AND l.id=$(location.id) AND e.id=$(environment.id) AND s.id=$(service.id) AND sl.id=$(service_level.id) 
+      columns:
+      - cluster
+      - dr
+      - code
+      valueColumn: code
+      group: Resource selection
+      line: rs_line2     
+      model: vars_external.meta.resource
+    - name: cluster_source
+      label: cluster
+      group: Resource
+      type: expression
+      hide: true
+      expression: fn.fnRestBasic('get','https://$(AIQUM_HOST)/api/datacenter/cluster/clusters?name=$(resource.cluster)','','aiqum_rest','.records[]
+        | {"name":.name,"management_ip":.management_ip}')
+      required: true
+      model: vars_external.source.cluster
+    - name: cluster_dest
+      label: Dr cluster
+      group: Resource
+      type: expression
+      hide: true
+      expression: fn.fnRestBasic('get','https://$(AIQUM_HOST)/api/datacenter/cluster/clusters?name=$(resource.dr)','','aiqum_rest','.records[]
+        | {"name":.name,"management_ip":.management_ip}')
+      required: true
+      model: vars_external.destination.cluster   
+    - name: cr
+      label: Change request
+      required: true
+      type: text
+      placeholder: CR######
+      regex:
+        expression: "^CR[0-9]{6}$"
+        description: "Must be format CR######"
+      model: vars_external.meta.change_request
+    - name: customer
+      type: text
+      group: Resource selection
+      line: rs_line2
+      label: Customer Id
+      placeholder: "A41"
+      regex:
+        expression: "^[A-Z0-9]{3}$"
+        description: "A valid Alfanumeric customer id"
+      required: true
+      model: vars_external.meta.customer
+    - name: svm
+      type: expression
+      runLocal: true
+      expression: "'$(resource.code)_$(customer)'.toLowerCase()"
+      group: Svm
+      line: svm
+      label: Svm name
+      required: true
+      dependencies:
+      - name: customer
+        isValid: true
+      validIfNot:
+        field: svm_exists
+        description: The svm already exists, use a unique name
+      model: vars_external.svm.name
+    - name: lif_name
+      label: Lif name
+      type: text
+      default: data
+      required: true
+      group: Svm
+      line: svm
+      model: vars_external.svm.lifs[0].name
+    - name: svm_exists
+      type: local
+      expression: |
+        (
+          (svms=[],svm='')=>{ 
+            return svms.includes(svm)
+          }
+        )($(existing_svms),'$(svm)')
+    - name: existing_svms
+      type: expression
+      hide: true
+      noOutput: true
+      expression: fn.fnRestBasic('get','https://$(cluster_source.management_ip)/api/svm/svms','','aiqum_rest','[.records[]
+        | .name ]')  
