add ad from hashi

--- a/data/playbooks/roles/maf/facts/tasks/credentials.yml
+++ b/data/playbooks/roles/maf/facts/tasks/credentials.yml
@@ -10,6 +10,7 @@
   - name: "Get credentials from hashi vault"
     ansible.builtin.set_fact:
       ontap: "{{ lookup('hashi_vault', 'secret=ansibleforms/data/ontap') }}"
+      ad:    "{{ lookup('hashi_vault', 'secret=ansibleforms/data/ad') }}"
   
   - name: "Set the credentials"
     ansible.builtin.set_fact:
